--- a/torque_model.ipynb
+++ b/torque_model.ipynb
@@ -453,7 +453,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "mysoftexo",
    "language": "python",
    "name": "python3"
   },
@@ -467,11 +467,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+    "hash": "2c52d41278691a6dfa690e703ab900f63175ca4b6b99f4d13740cac29c415178"
    }
   }
  },
